tests/NormalTests/paczka1/small_fuzzy/45400054.err
Error in line 2: vIb S584 4,1
Error in line 9: QYb0IK19UQ A895 1,2
